# OpenNetBattleWebDataAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  github  github.pub
API/: package.json  server-settings.json  server.js
API/v1/: auth.js  router.js
API/v1/controllers/: AdminUsers.js  Chips.js  Folders.js  PublicFolders.js  Users.js
API/v1/controllers/models/: AdminUsersModel.js  ChipsModel.js  ChipsModelModel.js  FoldersModel.js  PublicFoldersModel.js  UsersModel.js
client/: CMakeLists.txt  ConsoleApplication.cpp  WebAccountsAPI.h  WebClient.cpp  WebClient.h  config.json
client/ConsoleApplication/: ConsoleApplication.sln
client/ConsoleApplication/ConsoleApplication/: ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters
client/ConsoleApplication/ConsoleApplication/x64/Debug/: vc141.idb
client/ConsoleApplication/ConsoleApplication/x64/Debug/ConsoleA.EA73292F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
client/include/WebAPI/: WebAccountsAPI.h  WebClient.h
client/includes/httplib/: httplib.cc  httplib.h
client/src/: WebClient.cpp
tools/console/: ConsoleApplication.cpp  ConsoleApplication.h  StringUtils.h  config.json
web-server/: nohup.out  package-lock.json  package.json  process.txt  server-settings.example.json  server-settings.json  server.js
web-server/v1/: auth.js  mail_template.txt  router.js
web-server/v1/controllers/: AdminUsers.js  CardCombos.js  CardModels.js  CardProperties.js  Cards.js  ChipModels.js  Chips.js  Folders.js  KeyItems.js  Products.js  PublicFolders.js  Txs.js  Users.js
web-server/v1/controllers/models/: AdminUsersModel.js  CardComboModel.js  CardCombosModel.js  CardModelsModel.js  CardPropertiesModel.js  CardsModel.js  ChipsModel.js  FoldersModel.js  KeyItemsModel.js  ProductsModel.js  (+4 more)
web-server/v1/mail_templates/: pass_changed.txt  request_pass.txt
